todoyu timetracking changelog

timetracking 1.3.1 - not released yet
	* Added: (Headers of) Tasks currently being tracked by other users are hilighted light-blue
	* Added: Filter for projects with tasks that are currently begin tracked
	* Added: Filter for tasks being currently tracked
	* Added: Filter for overbooked tasks (in percent)
	* Added: Filter for overbooked tasks (absolute in minutes)
	* Bugfix: Fixed quicktask-handling (task_done flag was ignored / wrongly overwritten)
	* Bugfix: Fixed filter for overbooked tasks. Calculation is now over the summed tracked workload

timetracking 1.3.0 - 2013-03-27
	* Added: Icon for overtime tasks
	* Added: UnittestRunner
	* Added: TodoyuTimetrackingTask->isTrackable() and ->hasTrackableStatus()
	* Added: Make a hook voting before changing the task status on tracking start
	* Added: Hook timetracking.tracking.toggleStart to allow hooking for tracking start toggle
	* Changed: Replaced explicit truncating of text with css & css clean-up
	* Changed: Change overtime rule in task details (added tolerance)
	* Removed: Maximum boundaries for tolerance

timetracking 1.2.0 - 2012-05-03
	* Added: Person filter widgets: has tracked time in project, tracked time for customer
	* Added: Show info about chargeable workload in track in the tracks list
	* Added: Starting first tracking of task of person in current day immediately stores a 0:00 track, visible for other persons as well (was previously stored not until stopping the tracking)
	* Changed: Made headlet content wider, allowing unwrapped display up to 6 digits of time percent
	* Changed: After jumping to task from headlet the headlet popout is now closed
	* Changed: Show chargeable time in tracking list
	* Changed: made also status "rejected" and "waiting" trackable
	* Changed: on starting timetracking, task status is always updated to "in progress"

timetracking 1.1.3 - 2011-12-13
	* Bugfix: Sub tasks were marked as running too
	* Added: TimetrackingProject (+Manager)