@@ -8,4 +8,5 @@
 	<label index="task.editOwnChargeable">Kann die verrechenbare Zeit von eigenen Zeiten bearbeiten</label>
 	<label index="task.editAll">Kann den Arbeitsaufwand aller Benutzer bearbeiten</label>
 	<label index="task.editAllChargeable">Kann die verrechenbare Zeit aller Benutzer bearbeiten</label>
+	<label index="task.seeCurrentTracking">Aktuell erfasste Zeit sichtbar</label>
 </labels>
