@@ -8,4 +8,5 @@
 	<label index="task.editOwnChargeable">Can edit chargeable time of own tracks</label>
 	<label index="task.editAll">Can edit tracked time of all users</label>
 	<label index="task.editAllChargeable">Can edit chargeable time of all users</label>
+	<label index="task.seeCurrentTracking">Can see current tracking</label>
 </labels>
